Nicer-looking command line output.